# integris_test

./: CMakeLists.txt  Commands.cpp  Commands.h  ManagerCore.cpp  ManagerCore.h  README.md  UserInput.h  Utils.cpp  Utils.h  build.sh  main.cpp
Tasks/: Task.h  TaskData.cpp  TaskData.h  TaskEmpty.cpp  TaskEmpty.h  TaskInterface.cpp  TaskInterface.h
Tests/: CMakeLists.txt  test_ManagerCore.h  test_Task.h  test_TaskData.h  test_TaskEmpty.h
